crates/cribo/tests/snapshots/bundled_code@bundle_third_party_importlib_late_shadowed_callee.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_importlib_late_shadowed_callee/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        if getattr(module, '_cribo_machinery_loaded', False):
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('late_shadow_pkg', '_cribo_init___cribo_d38e22_late_shadow_pkg', 'late_shadow_pkg', True)
late_shadow_pkg_backend = _cribo.types.SimpleNamespace(__name__='late_shadow_pkg.backend')
late_shadow_pkg = _cribo.types.SimpleNamespace(__name__='late_shadow_pkg', __initializing__=False, __initialized__=False, __path__=[])
late_shadow_pkg.backend = late_shadow_pkg_backend
KIND = "real-backend"
late_shadow_pkg_backend.KIND = KIND
def _cribo_init___cribo_d38e22_late_shadow_pkg(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'late_shadow_pkg'
    """Package rebinding importlib later in the same function."""
    importlib = _cribo.importlib
    self.importlib = importlib
    self.importlib = importlib
    backend = _cribo.types.SimpleNamespace(KIND=KIND)
    self.backend = backend

    def broken_loader():
        result = importlib.import_module(name="late_shadow_pkg.backend")
        importlib = None
        return result
    broken_loader.__module__ = 'late_shadow_pkg'
    broken_loader.__qualname__ = 'broken_loader'
    self.broken_loader = broken_loader

    def real_kind():
        return KIND
    real_kind.__module__ = 'late_shadow_pkg'
    real_kind.__qualname__ = 'real_kind'
    self.real_kind = real_kind
    self.backend = late_shadow_pkg_backend
    self.__initialized__ = True
    self.__initializing__ = False
    return self
late_shadow_pkg.__init__ = _cribo_init___cribo_d38e22_late_shadow_pkg
__cribo_init_result = _cribo_init___cribo_d38e22_late_shadow_pkg(late_shadow_pkg)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(late_shadow_pkg, attr, getattr(__cribo_init_result, attr))
try:
    late_shadow_pkg.broken_loader()
except UnboundLocalError:
    print("UnboundLocalError preserved")
print(late_shadow_pkg.real_kind())
backend = late_shadow_pkg.backend
