crates/cribo/tests/snapshots/bundled_code@bundle_third_party_importlib_shadowed_callee.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_importlib_shadowed_callee/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
shadow_pkg_backend = _cribo.types.SimpleNamespace(__name__='shadow_pkg.backend')
shadow_pkg = _cribo.types.SimpleNamespace(__name__='shadow_pkg', __initializing__=False, __initialized__=False, __path__=[])
shadow_pkg.backend = shadow_pkg_backend
KIND = "real-backend"
shadow_pkg_backend.KIND = KIND
def _cribo_init___cribo_ffe0bc_shadow_pkg(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    """Package whose loader accepts a custom importer shadowing importlib."""
    importlib = _cribo.importlib
    self.importlib = importlib
    self.importlib = importlib
    backend = _cribo.types.SimpleNamespace(KIND=KIND)
    self.backend = backend

    def load_via(importlib):
        return importlib.import_module(name="shadow_pkg.backend")
    self.load_via = load_via

    def real_kind():
        return KIND
    self.real_kind = real_kind
    self.backend = shadow_pkg_backend
    self.__initialized__ = True
    self.__initializing__ = False
    return self
shadow_pkg.__init__ = _cribo_init___cribo_ffe0bc_shadow_pkg
__cribo_init_result = _cribo_init___cribo_ffe0bc_shadow_pkg(shadow_pkg)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(shadow_pkg, attr, getattr(__cribo_init_result, attr))
class CustomImporter:

    def import_module(self, name):
        return f"custom:{name}"
print(shadow_pkg.load_via(CustomImporter()))
print(shadow_pkg.real_kind())
backend = shadow_pkg.backend
